NIFI-12578 Refactor components in compress bundle using current API methods